--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,30 @@
 CHANGES
 =======
 
+1.15.0
+------
+
+* Updated from global requirements
+* Updated from global requirements
+* Add release note for fixing bug 1664877
+* Replaces uuid.uuid4 with uuidutils.generate_uuid()
+* change user access name limit from 32 to 255 characters
+* Updated from global requirements
+* Remove log translations
+* Clean docs/build before building docs
+* Updated from global requirements
+* Fix gate breakage
+* Raise TypeError in manilaclient/common/httpclient.py
+* Updated from global requirements
+* Updated from global requirements
+* Fixed log messages format
+* Use more specific asserts and fix an assertion in tests
+* Remove support for py34
+* Handle log message interpolation by the logger
+* Replace six.iteritems() with .items()
+* Missing parenthesis in help text
+* Update reno for stable/ocata
+
 1.14.0
 ------
 
