[update to 1.25.0] Change python3.5 job to python3.7 job on Stein+
Alexander Pugachev (1):
      Add unit-test for availability_zones.AvailabilityZone repr()

Andreas Jaeger (1):
      Use templates for cover and lower-constraints

Doug Hellmann (1):
      fix tox python3 overrides

Goutham Pacha Ravi (7):
      Fix functional tests
      import zuul job settings from project-config
      switch documentation job to new PTI
      add python 3.6 unit test job
      Drop 'clidoc' from sphinx extensions
      Stop encoding "~" in query parameters
      Change python3.5 job to python3.7 job on Stein+

OpenStack Release Bot (1):
      Update reno for stable/rocky

Tom Barron (1):
      Loosen docutils requirement pin

Vieri (1):
      Don't quote {posargs} in tox.ini

Vu Cong Tuan (1):
      Replace unicode with six.text_type

deepak_mourya (2):
      Fix type-show command with name
      Fix sort options --sort-key and --sort-dir in list command.

Key imported:
--list-packet:
# off=0 ctb=99 tag=6 hlen=3 plen=397
:public key packet:
	version 4, algo 1, created 1535482000, expires 0
	pkey[0]: [3072 bits]
	pkey[1]: [17 bits]
	keyid: D943D5D270273ADA
# off=400 ctb=b4 tag=13 hlen=2 plen=56
:user ID packet: "OpenStack Infra (Stein Cycle) <infra-root@openstack.org>"
# off=458 ctb=89 tag=2 hlen=3 plen=307
:signature packet: algo 1, keyid 0EFB943E9E0C013C

--fingerprint:
pub   rsa3072 2018-08-28 [SC] [expires: 2019-06-24]
      2702 3B1F FCCD 8E3A E9A5  CE95 D943 D5D2 7027 3ADA
uid           [ unknown] OpenStack Infra (Stein Cycle) <infra-root@openstack.org>
sub   rsa3072 2018-08-28 [E] [expires: 2019-06-24]
sub   rsa3072 2018-08-28 [S]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,24 @@
 CHANGES
 =======
 
-1.24.1
+1.25.0
 ------
 
+* Change python3.5 job to python3.7 job on Stein+
+* Don't quote {posargs} in tox.ini
+* Stop encoding "~" in query parameters
+* Add unit-test for availability\_zones.AvailabilityZone repr()
+* fix tox python3 overrides
+* Use templates for cover and lower-constraints
+* Drop 'clidoc' from sphinx extensions
+* add python 3.6 unit test job
+* switch documentation job to new PTI
+* import zuul job settings from project-config
+* Fix functional tests
+* Fix sort options --sort-key and --sort-dir in list command
+* Fix type-show command with name
 * Loosen docutils requirement pin
-* Update .gitreview for stable/rocky
+* Update reno for stable/rocky
 
 1.24.0
 ------
@@ -13,6 +26,7 @@ CHANGES
 * Fix is\_default value is empty issue when create
 * Support metadata for access rule resource
 * Fix using column reports nothing for capabilities
+* Replace unicode with six.text\_type
 * Add release note link in README
 * Add check to the flake8 job
 * Remove PyPI downloads
