[update to 1.26.0] * Add missing organizational unit (--ou) parameter in manila cli
Goutham Pacha Ravi (1):
      [Python3] Fix python3 bugs in code

Sean McGinnis (1):
      Remove setup.py check from pep8 job

Tom Barron (2):
      Run manilaclient-dsvm-neutron-functional on bionic
      Convert functional tests to python3

chenxiangui (1):
      Add Release Notes in README

kayrus (1):
      Add missing organizational unit (--ou) parameter in manila cli

qingszhao (1):
      Add Python 3.6 classifier to setup.cfg

sriram ramakrishnan (1):
      Return is_default as a value instead of a function object

sunjia (1):
      Change openstack-dev to openstack-discuss

1.26.0
------

* Convert functional tests to python3
* [Python3] Fix python3 bugs in code
* Add missing organizational unit (--ou) parameter in manila cli
* Run manilaclient-dsvm-neutron-functional on bionic
* Return is\_default as a value instead of a function object
* Change openstack-dev to openstack-discuss
* Add Python 3.6 classifier to setup.cfg
* Add Release Notes in README
* Remove setup.py check from pep8 job

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,19 @@
 CHANGES
 =======
 
+1.26.0
+------
+
+* Convert functional tests to python3
+* [Python3] Fix python3 bugs in code
+* Add missing organizational unit (--ou) parameter in manila cli
+* Run manilaclient-dsvm-neutron-functional on bionic
+* Return is\_default as a value instead of a function object
+* Change openstack-dev to openstack-discuss
+* Add Python 3.6 classifier to setup.cfg
+* Add Release Notes in README
+* Remove setup.py check from pep8 job
+
 1.25.0
 ------
 
